# g1-deterministic-safety-runtime

./: .gitignore  ARCHITECTURE_DECISIONS.md  AUDIT_READINESS_CHECKLIST.md  PLAN_REPO_QUALIFICATION_v1.md  README.md  TECHNICAL_DEBT_3C.md  docker-compose.yml
.github/workflows/: ci-audit.yml  ci-build.yml
docker/: Dockerfile.base  Dockerfile.dev  Dockerfile.runtime  Dockerfile.sim  README.md  entrypoint.sh
docs/: TRANSITION_MATRIX_G1.md  tesis_etapas_proyecto_g1_runtime_architecture_v12.md
docs/archive/: chat_bootstrap_protocol_g1_pipeline_v15.md  chat_bootstrap_protocol_g1_pipeline_v17.md  chat_bootstrap_protocol_g1_pipeline_v9.md  informe_etapa_4D3_2026-06-08.md
docs/audit/: 4J_FAULT_INJECTION_MATRIX.md  4J_THRESHOLD_CHARACTERIZATION.md  4J_TIMING_TRACEABILITY_REPORT.md  POLICY_CLARIFICATION_G1.md  TRACEABILITY_MATRIX_G1.md
docs/audit/archive/: PLAN_REPO_QUALIFICATION_v1.md
docs/current/: SAFETY_MODEL_G1.md  analisis_etapa_4I_desglose.md  chat_bootstrap_protocol_g1_pipeline_v15.md  chat_bootstrap_protocol_g1_pipeline_v18.md  chat_bootstrap_protocol_g1_pipeline_v19.md  chat_bootstrap_protocol_g1_pipeline_v20.md  chat_bootstrap_protocol_g1_pipeline_v21.md  chat_bootstrap_protocol_g1_pipeline_v22.md  chat_bootstrap_protocol_g1_pipeline_v23.md  chat_bootstrap_protocol_g1_pipeline_v24.md  chat_bootstrap_protocol_g1_pipeline_v25.md  chat_bootstrap_protocol_g1_pipeline_v26.md  chat_bootstrap_protocol_g1_pipeline_v27.md  informe_etapa_4F_2026-06-16.md  informe_etapa_4G_004_4H_P1_2026-06-19.md  informe_etapa_4G_P2B_2026-06-17.md  informe_etapa_4G_P2C_2026-06-18.md  informe_etapa_4G_P3_P5_2026-06-18.md  informe_etapa_4G_parcial_2026-06-17.md  informe_etapa_4H_P2_2026-06-19.md  informe_etapa_4I_2026-06-21.md  informe_etapa_4J_P0_P1_2026-06-22.md  informe_etapa_4J_P2A_2026-06-23.md  informe_etapa_4J_P3_2026-06-23.md  informe_etapa_4J_P4AB_2026-06-25.md  tesis_etapas_proyecto_g1_runtime_architecture_v18.md  tesis_etapas_proyecto_g1_runtime_architecture_v20.md  tesis_etapas_proyecto_g1_runtime_architecture_v21.md  tesis_etapas_proyecto_g1_runtime_architecture_v22.md  tesis_etapas_proyecto_g1_runtime_architecture_v23.md  tesis_etapas_proyecto_g1_runtime_architecture_v24.md  tesis_etapas_proyecto_g1_runtime_architecture_v25.md  tesis_etapas_proyecto_g1_runtime_architecture_v26.md  tesis_etapas_proyecto_g1_runtime_architecture_v27.md  tesis_etapas_proyecto_g1_runtime_architecture_v28.md  tesis_etapas_proyecto_g1_runtime_architecture_v29.md
docs/experiments/4E_P4_2026-06-15/: README.md
docs/phases/: README.md
docs/phases/4C/: README.md  evidence_index.md
docs/phases/4D/: README.md  evidence_index.md
docs/phases/4E/: README.md  evidence_index.md
evidence/: README.md
legacy/: README.md
legacy/agv_bringup/: package.xml
legacy/agv_bringup/config/: amcl.yaml  ekf.yaml  slam_toolbox_online.yaml
legacy/agv_bringup/launch/: system.launch.py  system_g1.launch.py  system_nav2_slam.launch.py
legacy/perception_node/: setup.py
legacy/safety_policy_node/: setup.cfg
sim_runtime/: README.md  harness_4H_P2_focal.py
sim_runtime/4D-2/: 4d2h.kit  isaacsim.min.loop.g1ext.test.kit  isaacsim.min.loop.python.g1.kit  isaacsim.min.python.g1.kit
sim_runtime/4D-3A/: 4d3a_probe.kit
sim_runtime/4D-3B1/: 4d3b1.kit  4d3b1step.kit
sim_runtime/4D-3B2/: 4d3b2.kit  fastdds_udp.xml  sub_check.py  sub_trace.py
sim_runtime/4D-3B3/: 4d3b3.kit  sub_3topics.py
sim_runtime/4D-3B4/: 4d3b4probe.kit  linklist.kit  live.kit  sensorread.kit  sub_live.py
sim_runtime/4F/: combo_single.kit
sim_runtime/4G/: analyze_runs.py  launch_pipeline.py
sim_runtime/4J/: harness_4J_P0B_integration.py  harness_4J_P0_focal.py  harness_4J_P1B_focal.py  harness_4J_P2_direct_trace.py  harness_4J_P3_timing_matrix.py  harness_4J_P4B_negative_control.py  harness_4J_P4C_positive_controls.py  harness_P2_A2_freeze.py  harness_P2_A3_naninf.py  harness_P2_A4_timestamp.py  harness_P2_A5_fallen_direct.py  run_p4b.sh  run_p4c.sh
src/: README.md
src/agv_bringup/: CMakeLists.txt
src/agv_bringup/config/: nav2_params.yaml
src/agv_bringup/launch/: localization.launch.py  navigation.launch.py  system.launch.py  system_nav2_slam.launch.py
src/agv_bringup/maps/: map.pgm
src/agv_bringup/scripts/: agv_recovery_manager.py  agv_recovery_manager.py.bak_antes_fixes  agv_recovery_manager.py.bak_indent_fix3  agv_recovery_manager.py.bak_recovery_fix  agv_watchdog_node.py  agv_watchdog_node.py.bak
src/agv_bringup/test/: smoke_test_recovery_manager.py  test_watchdog.py
src/agv_msgs/: CMakeLists.txt  package.xml
src/cross_consistency_observer/: package.xml  setup.cfg  setup.py
src/cross_consistency_observer/cross_consistency_observer/: cross_consistency_observer.py
src/cross_consistency_observer/launch/: cross_consistency_observer.launch.py
src/g1_description/: CMakeLists.txt  package.xml
src/g1_description/config/: interfaces.md
src/g1_description/launch/: description.launch.py
src/g1_description/test/: test_description_launch.py
src/g1_description/xacro/: g1.xacro
src/g1_msgs/: CMakeLists.txt  package.xml
src/g1_msgs/msg/: Detection3D.msg  DetectionArray3D.msg  FootContact.msg  RecoveryEvent.msg  SafetyAction.msg  SafetyEvent.msg  SystemState.msg
src/perception_node/: package.xml
src/recovery_g1/: package.xml  setup.cfg  setup.py
src/recovery_g1/launch/: recovery_g1.launch.py
src/recovery_g1/recovery_g1/: recovery_g1.py
src/safety_orchestrator_g1/: package.xml  setup.cfg  setup.py
src/safety_orchestrator_g1/launch/: safety_orchestrator_g1.launch.py
src/safety_orchestrator_g1/safety_orchestrator_g1/: safety_orchestrator_g1.py  safety_orchestrator_g1_3B_backup.py
src/safety_orchestrator_g1/test/: test_orchestrator_transitions.py
src/safety_policy_node/: package.xml  setup.py
src/test_g1_safety_layer/: package.xml  setup.cfg  setup.py
src/test_g1_safety_layer/test/: test_orchestrator_init_state.py  test_safety_layer_launch.py
src/watchdog_g1/: package.xml  setup.cfg  setup.py
src/watchdog_g1/launch/: watchdog_g1.launch.py
src/watchdog_g1/watchdog_g1/: watchdog_g1.py
(+68 files in other folders)
