<?xml version="1.0"?>
<package format="3">
  <name>agv_bringup</name>
  <version>0.0.1</version>

  <description>AGV bringup package</description>

  <maintainer email="jorgerpg1213@gmail.com">Jorge Padilla</maintainer>

  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <exec_depend>slam_toolbox</exec_depend>
  <exec_depend>nav2_bringup</exec_depend>
  <exec_depend>robot_localization</exec_depend>
  <exec_depend>tf2_ros</exec_depend>
  <exec_depend>rplidar_ros</exec_depend>

  <exec_depend>launch</exec_depend>
  <exec_depend>launch_ros</exec_depend>

  <exec_depend>nav2_amcl</exec_depend>
  <exec_depend>nav2_map_server</exec_depend>
  <exec_depend>nav2_planner</exec_depend>
  <exec_depend>nav2_controller</exec_depend>
  <exec_depend>nav2_bt_navigator</exec_depend>
  <exec_depend>nav2_behaviors</exec_depend>
  <exec_depend>nav2_lifecycle_manager</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>

</package>
