cmake_minimum_required(VERSION 3.8)
project(agv_msgs)

if(CMAKE_COMPILER_IS_GNUCXX OR CMAKE_CXX_COMPILER_ID MATCHES "Clang")
  add_compile_options(-Wall -Wextra -Wpedantic)
endif()

# dependencias
find_package(ament_cmake REQUIRED)
find_package(rosidl_default_generators REQUIRED)

# generar mensajes
rosidl_generate_interfaces(${PROJECT_NAME}
  "msg/Detection.msg"
  "msg/DetectionArray.msg"
)

# exportar runtime
ament_export_dependencies(rosidl_default_runtime)

ament_package()
