<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>g1_description</name>
  <version>0.1.0</version>
  <description>
    Unitree G1 robot description package.
    PHASE 4A — Skeleton structure only.
    Joint names, frames and inertias are PROVISIONAL.
    Pending synchronization with official Unitree USD assets
    from huggingface.co/datasets/unitreerobotics/unitree_sim_isaaclab_usds
    DO NOT treat as final until Phase 4B validation on MIT VM.
  </description>
  <maintainer email="todo@todo.com">pipeline-team</maintainer>
  <license>BSD-3-Clause</license>
  <buildtool_depend>ament_cmake</buildtool_depend>
  <exec_depend>robot_state_publisher</exec_depend>
  <exec_depend>joint_state_publisher</exec_depend>
  <exec_depend>xacro</exec_depend>
  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
