<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>test_g1_safety_layer</name>
  <version>0.1.0</version>
  <description>
    Level 4 integration tests for G1 safety layer skeleton.
    Validates runtime behavior of watchdog_g1, cross_consistency_observer,
    safety_orchestrator_g1, and recovery_g1 exclusively via observable topics.
    No access to internal node state.
    Defined by ADR-002 Sección 12.3 + RESILIENCE_MODEL_G1.md.
  </description>
  <maintainer email="todo@todo.com">pipeline-team</maintainer>
  <license>BSD-3-Clause</license>
  <depend>rclpy</depend>
  <depend>g1_msgs</depend>
  <depend>diagnostic_msgs</depend>
  <depend>watchdog_g1</depend>
  <depend>cross_consistency_observer</depend>
  <depend>safety_orchestrator_g1</depend>
  <depend>recovery_g1</depend>
  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>
  <test_depend>launch_testing</test_depend>
  <test_depend>launch_testing_ros</test_depend>
  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
