<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>watchdog_g1</name>
  <version>0.1.0</version>
  <description>
    Watchdog node for G1 ROS2 Pipeline.
    Detects topic timeouts and node heartbeat absence.
    Publishes SafetyEvent to /safety_events.
    Publishes heartbeat to /diagnostics.
    Defined by RESILIENCE_MODEL_G1.md + ADR-002.
    Thresholds TBD — pending SDK G1.
  </description>
  <maintainer email="todo@todo.com">pipeline-team</maintainer>
  <license>BSD-3-Clause</license>
  <depend>rclpy</depend>
  <depend>g1_msgs</depend>
  <depend>diagnostic_msgs</depend>
  <depend>builtin_interfaces</depend>
  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>
  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
